@@ -1,5 +1,17 @@
 2010-05-12  Csaba Osztrogonác  <ossy@webkit.org>
 
+        Reviewed by Adam Barth.
+
+        Qt build failures cause SheriffBot false positives
+        https://bugs.webkit.org/show_bug.cgi?id=38969
+
+        Add Qt bots back to the core builders, because bug fixed by r59261.
+
+        * Scripts/webkitpy/common/net/buildbot.py:
+        * Scripts/webkitpy/common/net/buildbot_unittest.py:
+
+2010-05-12  Csaba Osztrogonác  <ossy@webkit.org>
+
         Reviewed by Kenneth Rohde Christiansen.
 
         [Qt] Slave losts cause build break on bots
